<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.prototype1.view.EditEventFragment">


    <TextView
        android:id="@+id/editEventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/edit_event"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/change_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black" />


    <EditText
        android:id="@+id/newEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/newEventName"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/eventPlaceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/change_place"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />


    <EditText
        android:id="@+id/newEventPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/newEventPlace"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/eventCatTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/eventCatTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />


    <EditText
        android:id="@+id/newEventCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/newEventCat"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/confirmEditButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Confirm Changes" />

</LinearLayout>
